--- a/src/webapp/view/main.view.xml
+++ b/src/webapp/view/main.view.xml
@@ -10,75 +10,78 @@
     controllerName="com.ed.mii.controller.main">
     <App id="mainApp">
         <pages>
-            <Page id="mainPageId" title="{i18n>mainPageTitle}">      
+            <Page id="mainPageId" title="{i18n>mainPageTitle}">
                 <content>
                     <Panel width="auto">
                         <!--header-->
                         <HBox alignItems="Center" justifyContent="Center" class="SapDefaultColourStyle" height="500%">
-                            <Label text="{i18n>mainDashboardTitle}" class="TextHeaderMainStyle sapUiMediumMarginEnd"/>
+                            <!--<Image ariaDetails="detailsActiveImage" src="{om.ed.mii.images.solvia_logo_small.png}"></Image>-->
+                            <Label text="{i18n>mainDashboardTitle}" class="TextHeaderMainStyle sapUiMediumMarginEnd" />
                         </HBox>
                         <!--grid content-->
-                        <f:GridContainer
-                        id="grid1"
-                        class="sapUiSmallMargin"
-                        snapToRow="true">
-                        <f:layout>
-                            <f:GridContainerSettings rowSize="84px" columnSize="84px" gap="8px" />
-                        </f:layout>
-                        <GenericTile header="{i18n>geographicFacilityMapTitle}" subheader="Open Map" press="onPressOpenMappage">
-                            <layoutData>
-                                <f:GridContainerItemLayoutData minRows="2" columns="2" />
-                            </layoutData>
-                            <TileContent footer="Facility List">
-                                <ImageContent src="sap-icon://home-share" />
-                            </TileContent>
-                        </GenericTile>
-                        <GenericTile header="{i18n>activeWorkerListTitle}" subheader="" press="onPressOpenActiveWorkerpage">
-                            <layoutData>
-                                <f:GridContainerItemLayoutData minRows="2" columns="2" />
-                            </layoutData>
-                            <TileContent>
-                                <ImageContent src="sap-icon://activities" />
-                            </TileContent>
-                        </GenericTile>
-                        <GenericTile header="{i18n>calenderTitle}">
-                            <layoutData>
-                                <f:GridContainerItemLayoutData minRows="2" columns="2" />
-                            </layoutData>
-                            <TileContent footer="Today">
-                                <ImageContent src="sap-icon://check-availability"/>
-                                <NumericContent id="numericContainerId" value="12" />
-                            </TileContent>
-                        </GenericTile>
-                        <GenericTile header="Success Map" subheader="Consumable Material Panel" press="onPressConsumableMaterialpage">
-                            <layoutData>
-                                <f:GridContainerItemLayoutData minRows="2" columns="2" />
-                            </layoutData>
-                            <TileContent unit="EUR" footer="Current Quarter">
-                                <ImageContent src="sap-icon://map-3" />
-                            </TileContent>
-                        </GenericTile>
-
-
-            
-                        <w:Card manifest="{manifests>/listContent/mediumList}">
-                            <w:layoutData>
-                                <f:GridContainerItemLayoutData minRows="4" columns="3" />
-                            </w:layoutData>
-                        </w:Card>
-                        <w:Card manifest="{manifests>/listContent/largeList}">
-                            <w:layoutData>
-                                <f:GridContainerItemLayoutData minRows="4" columns="4" />
-                            </w:layoutData>
-                        </w:Card>
-                        <w:Card manifest="{manifests>/listContent/smallList}">
-                            <w:layoutData>
-                                <f:GridContainerItemLayoutData minRows="2" columns="2" />
-                            </w:layoutData>
-                        </w:Card>    
-                      
-            
-                    </f:GridContainer>
+                        <f:GridContainer id="grid1" class="sapUiSmallMargin" snapToRow="true">
+                            <f:layout>
+                                <f:GridContainerSettings rowSize="84px" columnSize="84px" gap="8px" />
+                            </f:layout>
+                            <GenericTile header="{i18n>calenderTitle}">
+                                <layoutData>
+                                    <f:GridContainerItemLayoutData minRows="2" columns="2" />
+                                </layoutData>
+                                <TileContent footer="Today">
+                                    <ImageContent src="sap-icon://check-availability" />
+                                    <NumericContent id="numericContainerId" value="12" />
+                                </TileContent>
+                            </GenericTile>
+                            <GenericTile header="{i18n>geographicFacilityMapTitle}" subheader="Open Map" press="onPressOpenMappage">
+                                <layoutData>
+                                    <f:GridContainerItemLayoutData minRows="2" columns="2" />
+                                </layoutData>
+                                <TileContent footer="Facility List">
+                                    <ImageContent src="sap-icon://home-share" />
+                                </TileContent>
+                            </GenericTile>
+                            <GenericTile header="{i18n>activeWorkerListTitle}" subheader="" press="onPressOpenActiveWorkerpage">
+                                <layoutData>
+                                    <f:GridContainerItemLayoutData minRows="2" columns="2" />
+                                </layoutData>
+                                <TileContent>
+                                    <ImageContent src="sap-icon://activities" />
+                                </TileContent>
+                            </GenericTile>
+                            <GenericTile header="{i18n>consumableMaterialTitle}" subheader="" press="onPressConsumableMaterialpage">
+                                <layoutData>
+                                    <f:GridContainerItemLayoutData minRows="2" columns="2" />
+                                </layoutData>
+                                <TileContent>
+                                    <ImageContent src="sap-icon://developer-settings" />
+                                </TileContent>
+                            </GenericTile>
+                            <f:Card class="sapUiMediumMargin" width="300px">
+                                <f:header>
+                                    <card:Header title="OEE Dashboards" subtitle="main panel to check production performance" press="onPressOEEDashboardpage"/>
+                                </f:header>
+                                <f:content>
+                                    <List
+                                        showSeparators="None"
+                                        items="{
+                                            path: 'products>/productItems'
+                                        }">
+                                        <CustomListItem>
+                                            <HBox alignItems="Center" justifyContent="SpaceBetween">
+                                                <VBox class="sapUiSmallMarginBegin sapUiSmallMarginTopBottom" >
+                                                    <Title level="H3" text="{products>title}" />
+                                                    <Text text="{products>subtitle}" />
+                                                </VBox>
+                                                <ObjectStatus
+                                                    class="sapUiTinyMargin sapUiSmallMarginEnd"
+                                                    text="{products>revenue}"
+                                                    state="{products>statusSchema}" />
+                                            </HBox>
+                                        </CustomListItem>
+                                    </List>
+                                </f:content>
+                            </f:Card>                       
+                        </f:GridContainer>
                     </Panel>
                 </content>
             </Page>
